--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,9 +1,9 @@
 name: Python application
-
+env:
+  TZ: Asia/Taipei
 on:   
   schedule:
-     - cron:  '*/15 * * * *'
-       
+     - cron:  '0 17 * * 4'
 jobs:
   create_weekly_book_list:
     runs-on: ubuntu-latest
