--- a/.github/workflows/parser_notifier.yml
+++ b/.github/workflows/parser_notifier.yml
@@ -13,6 +13,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v1
+      env:
+        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+        TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
       with:
         python-version: 3.8
     - name: Install dependencies
