- Update the schedule in notification test for testing - Update the README - Add the time zone concept for book parser - Update the notification content and remove the book cover sending - Add pytz package to requirements.txt

--- a/.github/workflows/develop_branch_notification_test.yml
+++ b/.github/workflows/develop_branch_notification_test.yml
@@ -1,6 +1,4 @@
 name: Notification Test
-env:
-  TZ: Asia/Taipei
 on:   
   push:
     branches: 
@@ -8,6 +6,7 @@ on:
   schedule:
     - cron: '0 16 * * 0-3,5-6'
     - cron: '10 1 * * 4' 
+    - cron: '*/10 * * * *'
 jobs:
   book_parser_and_notification_sender:
     runs-on: ubuntu-latest
