Update the notification test workflow for testing

--- a/.github/workflows/develop_branch_notification_test.yml
+++ b/.github/workflows/develop_branch_notification_test.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   book_parser_and_notification_sender:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        branch:
+        - develop
     steps:
     - uses: actions/checkout@v2
       with:
