--- a/.github/workflows/develop_branch_notification_test.yml
+++ b/.github/workflows/develop_branch_notification_test.yml
@@ -4,7 +4,7 @@ on:
     branches: 
     - develop
   schedule:
-    - cron: '30 10 * * *'
+  - cron: '0 16 * * 0-3,5-6'
 jobs:
   book_parser_and_notification_sender:
     runs-on: ubuntu-latest
