--- a/.github/workflows/daily_notification.yml
+++ b/.github/workflows/daily_notification.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: master
+        token: ${{ secrets.PAT_TOKEN }}
     - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
