--- a/.github/workflows/daily_notification.yml
+++ b/.github/workflows/daily_notification.yml
@@ -1,35 +1,28 @@
 name: Daily Notification
 on:   
   schedule:
-  - cron: '0 */8 * * *'
+  - cron: '10 0 * * *'
 jobs:
   Daily_Notification:
     name: Daily Notification
     runs-on: ubuntu-latest
     steps:
-    - name: Setup timezone
-      uses: zcong1993/setup-timezone@master
-      with:
-        timezone: Asia/Taipei
     - uses: actions/checkout@v2
+    - name: Setup python
+      uses: actions/setup-python@v2
       with:
-        ref: master
-        token: ${{ secrets.PAT_TOKEN }}
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Parser the book info and send out the notification
+    - name: Parse The Book Info And Send Out The Notification To Kobo 99
       env:
+        TELEGRAM_TO:    ${{ secrets.TELEGRAM_TO }}
         TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-        TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
-        TELEGRAM_TO_KOBO_GROUP: ${{ secrets.TELEGRAM_TO_KOBO_GROUP }}
-      run: |
-        python kobo_notifier/daily_notifier.py
-    - uses: stefanzweifel/git-auto-commit-action@v3.0.0
-      with:
-        commit_message: Commit the checkpoint back to repo
+      run:  python kobo_notifier/daily_notifier.py -m 1
+    - name: Parse The Book Info And Send Out The Notification To Kobo Disscuss Group
+      env:
+        TELEGRAM_TO:    ${{ secrets.TELEGRAM_TO_KOBO_GROUP }}
+        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      run:  python kobo_notifier/daily_notifier.py -m 2
